--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.9.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "face-api.js": "^0.22.2",
     "mongoose": "^6.2.8",
     "multer": "^1.4.4",
     "passport": "^0.5.2",
