--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browser-detect": "^0.2.28",
     "canvas": "^2.9.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
